--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,36 +1,11 @@
-body,html {
-    margin: 0;
-    padding: 0;
-}
-* {
-    box-sizing: border-box;
-    user-select: none;
-}
-
-// Fonts
-@font-face {
-    font-family: 'Romana';
-    src: url('../fonts/RomanaEF-Medium.otf') format('opentype')
-}
-
-@font-face {
-    font-family: 'Apercu';
-    src: url('../fonts/Apercu\ Pro\ Regular.otf') format('opentype')
-}
-
-$titleFont: 'Romana';
-$bodyFont: 'Apercu';
-
 // Colors 
 $white: #fff;
 $black: #000;
 $red: #aa151b;
 $yellow: #f1bf00;
 
-p {
-    font-family: $titleFont;
-    font-size: 10rem;
-}
+$titleFont: 'Romana';
+$bodyFont: 'Apercu';
 
 .container {
     width: 1640px;
@@ -99,7 +74,7 @@ header {
     height: 100%;
     background-color: $yellow;
     z-index: 1;
-    animation: frameSlideLeft 1.0s 1;
+    animation: frameSlideLeft 1.0s ease-in-out 1;
     animation-delay: 2.5s;
     animation-fill-mode: forwards;
 
@@ -157,10 +132,10 @@ header {
 }
 
 // Banner
-
 #base {
     height: 100vh;
 }
+
 .banner {
     display: flex;
     align-items: center;
@@ -217,21 +192,21 @@ header {
         // Animations 
         .banner-title::after, .banner-body {
             position: relative; 
-            animation: upMove 1.5s 1;
+            animation: fadeUp 1.5s ease-in-out 1;
             animation-delay: 2.3s;
             animation-fill-mode: forwards;
         }
 
         .left-image {
             position: relative;
-            animation: leftMove 1.5s 1;
+            animation: leftMove 1.5s ease-in-out 1;
             animation-delay: 2.3s;
             animation-fill-mode: forwards;
         }
 
         .right-image {
             position: relative;
-            animation: rightMove 1.5s 1;
+            animation: rightMove 1.5s ease-in-out 1;
             animation-delay: 2.3s;
             animation-fill-mode: forwards;
         }
@@ -241,7 +216,7 @@ header {
             border: 5px solid $yellow;
         }
 
-        @keyframes upMove {
+        @keyframes fadeUp {
             0% {
                 bottom: -200px;
                 opacity: 0
