--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -1,27 +1,17 @@
 .boxes {
-    border: 3px solid black;
     display: grid;
-    // background-color:red;
-    // height: 100px;
-    // width: 100px;
-}
-.box1 {
-    height: 200px;
-    width: 350px;
-    background-color: blue;
-}
-.box2 {
-    height: 150px;
-    width: 200px;
-    background-color: red;
-}
-.box3 {
-    height: 200px;
-    width: 100px;
-    background-color: yellow;
-}
-.box4 {
-    height: 250px;
-    width: 250px;
-    background-color: green;
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-gap: 1em;
+    grid-auto-rows: minmax(100px, auto);
+    justify-items: stretch;
+    align-items: stretch;
+    .box {
+        border: 3px solid black;
+        background-color: grey;
+        padding: 1em;
+        // margin: 5px;
+    }
+    .box:nth-child(odd) {
+        background-color: #eee;
+    }
 }
