--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -28,44 +28,9 @@ $bodyFont: 'Apercu';
     // }
 }
 
-// Header 
-header {
-    height: 80px;
-    width: 100%;
-    position: absolute;
-    top: 0px;
-    z-index: 10;
-    .inner-header {
-        display: flex; 
-        align-items: center;
-        justify-content: space-between;
-        height: 80px;
-        .logo {
-            a {
-                font-weight: 700;
-                text-decoration: none;
-                letter-spacing: 1.5px;
-                color: $black;
-            }
-        }
-        .navigation {
-            nav {
-                a {
-                    margin: 0 20px;
-                    text-decoration: none;
-                    letter-spacing: 1.75px;
-                    text-transform: uppercase;
-                    font-size: 0.75rem;
-                    color: $black;
-                    &:last-child {
-                        margin-right: 0px;
-                    }
-                }
-            }
-        }
-    }
+#index {
+    height: 100vh;
 }
-
 // Intro Page
 .intro-page {
     position: absolute;
@@ -132,10 +97,6 @@ header {
 }
 
 // Banner
-#base {
-    height: 100vh;
-}
-
 .banner {
     display: flex;
     align-items: center;
@@ -183,7 +144,7 @@ header {
         .left-image, .right-image {
             width: 300px;
             transition: 200ms;
-            border: 5px solid $white;
+            border: 5px solid rgba(0, 0, 0, 0);
             // @media (max-width: 1440px) {
             //     width: 365px;
             // }
