--- a/src/styles/arquitectura.scss
+++ b/src/styles/arquitectura.scss
@@ -22,25 +22,33 @@ $bodyFont: 'Apercu';
 
 #arquitectura {
     height: 100vh; 
+    width: 100vw;
+    overflow: hidden;
 
-    .red-bar {
+    .red-bar-svg {
         position: absolute;
-        width: 100vw;
-        height: 65%;
-        top: 35%;
+        width: 100%;
+        height: calc(100vh - 340px);
+        top: 340px;
     }
+
+    // .red-bar {
+    //     position: absolute;
+    //     width: 100vw;
+    //     height: calc(100vh - 340px);
+    //     top: 340px;
+    // }
     
     .content {
-        height: fit-content;
+        margin-top: 192px;
         position: absolute;
-        top: 50%;
         left: 50%;
-        transform: translate(-50%, -50%);
+        transform: translateX(-50%);
         display: flex;
         
         .images {
             display: grid;
-            grid-template-columns: 1fr 1fr;
+            grid-template-columns: min-content auto;
             grid-gap: 5px;
             .image {
                 border: 5px solid rgba(0, 0, 0, 0);
@@ -85,7 +93,7 @@ $bodyFont: 'Apercu';
         }
         
         .text {
-            margin-top: 8%;
+            padding-top: 90px;
             opacity: 0;
             padding-right: 2em;
             position: relative;
