--- a/src/styles/barrios.scss
+++ b/src/styles/barrios.scss
@@ -7,20 +7,27 @@ $yellow: #f1bf00;
 $titleFont: 'Romana';
 $bodyFont: 'Apercu';
 
+
 #barrios {
     height: 100vh; 
 
-    .red-bar {
-        height: 250px;
-        width: 100vw;
+    .red-bar-svg {
+        position: absolute;
+        width: 100%;
+        height: 100%;
     }
+
+    // .red-bar {
+    //     height: 250px;
+    //     width: 100vw;
+    // }
     
     .content {
         display: flex;
         justify-content: center;
         
         .images {
-            margin-top: 3%;
+            margin-top: 60px;
             padding: 50px;
             display: grid;
             grid-template-columns: 1fr 1fr;
@@ -80,7 +87,7 @@ $bodyFont: 'Apercu';
         }
         
         .text {
-            margin-top: 11.25%;
+            margin-top: 187px;
             width: 230px;
             position: relative;
 
@@ -100,7 +107,7 @@ $bodyFont: 'Apercu';
         }
     }
 
-    .next-page {
+    .next-page a {
         position: absolute;
         top: 90%; 
         left: 90%; 
@@ -114,14 +121,14 @@ $bodyFont: 'Apercu';
         transition: 200ms;
     }
 
-    .next-page:hover {
+    .next-page a :hover {
         cursor: pointer;
         // font-weight: 700;
         color: $black;
         transition: 250ms;
     }
 
-    .next-page::after {
+    .next-page a::after {
         display: block;
         content: "";
         border-bottom: solid 3px $red;  
@@ -130,7 +137,7 @@ $bodyFont: 'Apercu';
         transform-origin: 0%;
     }
 
-    .next-page:hover::after {
+    .next-page a:hover::after {
         transform: scaleX(1);
     }
 
@@ -190,4 +197,10 @@ $bodyFont: 'Apercu';
         right: 0px;
         opacity: 1;
     }
+}
+
+$height: 400px;
+
+:export {
+    height: $height;
 }
